@@ -1,0 +1,6 @@
+(define-interface mini-profiler-interface
+  (export
+   profile-init!
+   display-profile
+   (define-prof :syntax)
+   (account-for :syntax)))
