@@ -1,0 +1,8 @@
+(define-structure mini-profiler mini-profiler-interface
+  (open scheme
+	table
+	formats
+	extended-ports
+	time)
+  (files profile))
+   
