@@ -1,4 +1,5 @@
 version 0.6
+* New s48 library: mini-profiler
 * New s48 library: reinitializer
 * New scsh libraries: file-mode
 * New s48 libraries: SRFI-34/SRFI-35 exceptions and conditions, SRFI-10
